2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* configure.ac: Look for perl, and substitute into vtysh/extract.pl.
	Search for termcap functions more expansively (fixes vtysh compile
	on NetBSD).  Clean up --enable-vtysh definition.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* update-autotools: Use -rf on autom4te.cache.

2004-06-20 Hasso Tepper <hasso@estpak.ee>

	* lib/vty.c: Don't attempt to load configuration file from current
	  directory.
	* Update vty_read_config() calls in bgpd/bgp_main.c, isisd/isis_main.c,
	  ospf6d/ospf6_main.c, ospfd/ospf_main.c, ripd/rip_main.c,
	  ripngd/ripng_main.c and zebra/main.c.

2004-05-11 Paul Jakma <paul@dishone.st>

	* configure.ac: Add solaris support for the zebra/*_solaris 
	  method's, based on Sowmini's patches.

2004-04-08 Paul Jakma <paul@dishone.st>

	* ospf_spf.h: Add backlink field to struct vertex
	* ospf_spf.h: (ospf_vertex_new) initialise backlink
	  (ospf_lsa_has_link) return index of link back to
	  vertex V from candidate vertex W, or -1 if no link exists.
	  (ospf_spf_next) save backlink index for candidate vertex
	* ospf_interface.c: (ospf_vl_set_params) Use the backlink index
	  to determine correct address for virtual-link peers. Fall back 
	  to older "pick first link" method if no backlink index exists.
	  
2004-04-06 Hasso Tepper <hasso@estpak.ee>
	
	* zebra/ipforward_proc.c: Fixed lowering privileges.
	* zebra/zserv.c: Fixed "(no) ipv6 forwarding" command logic.
	* configure.ac: Added --disable-capabilities switch to configure.

2004-03-22 Hasso Tepper <hasso@estpak.ee>

	* Readded SIGTERM handling so daemons can clean up their stuff if they
	  are killed (not murdered).

2004-03-20 Michael Bruening <mike@vailsys.com>

	* ospfd/ospf_vty.c: Completed array distribute_str of route types with
	  addition of "isis". This array must be indexed by
	  ZEBRA_ROUTE_(SYSTEM|KERNEL|...) defines in zebra.h, and should
	  be updated with every route type addition. This fix allows