@@ -1,3 +1,8 @@
+2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>
+
+	* Makefile.am (EXTRA_DIST): Add files in mpls explicitly, to avoid
+	copying CVS files, per the automake manual's recommendations.
+
 2004-05-27 Paul Jakma <paul@dishone.st>
 
 	* Correct RIP port, s/521/520/, reported by xantius@xantius.com
