@@ -1,5 +1,11 @@
 2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>
 
+	* Makefile.am: add files to EXTRA_DIST rather than copying, and
+	omit the kludgy cleaning steps, which were failing when the list
+	to clean was empty.
+
+2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>
+	
 	* configure.ac: Look for perl, and substitute into vtysh/extract.pl.
 	Search for termcap functions more expansively (fixes vtysh compile
 	on NetBSD).  Clean up --enable-vtysh definition.
